--- a/index.html
+++ b/index.html
@@ -409,29 +409,40 @@
   </footer>
   <!-- Модальное окно -->
   <div class="backdropd backdropd--hidden" data-modal>
-    <div class="backdrop__modal">
-      <button data-modal-close class="modal__button-clouse"></button>
-        <h1 class="modal__title">Оставьте свои данные, мы вам перезвоним</h1>
-      <div class="modal__field">
-        <label for="name" class="modal__label">Имя</label>
-        <input type="text" name="name" id="name" class="modal__input" autofocus >
-      </div>
-      <div class="modal__field">
-        <label for="tel" class="modal__label">Телефон</label>
-        <input type="tel" name="tel" id="tel" class="modal__input">
-      </div>
-      <div class="modal__field">
-        <label for="mail" class="modal__label">Почта</label>
-        <input type="email" name="mail" id="mail" class="modal__input">
-      </div>
-      <div class="modal__field">
-        <textarea name="comment" rows="10" placeholder="Комментарий" class="modal__textarea"></textarea>
-      </div>
-      
-      <input type="checkbox" name="checkbox" id="checkbox" class="modal__input">
-      <label for="checkbox" class="modal__label">Соглашаюсь с рассылкой и принимаю <a href="" class="modal__label-link list">Условия договора</a></label>
-      <button type="submit"class="modal__button-submit">Отправить</button>
-    </div>
+    <div class="backdrop-modal">
+     <form>
+      <button data-modal-close class="modal__button--clouse"></button>
+      <h1 class="modal__title">Оставьте свои данные, мы вам перезвоним</h1>
+      <label class="modal__field">
+        <input type="text" name="name" class="modal__input" autofocus placeholder=" ">
+        <svg class="modal__svg">
+          <use href="./images/sprite.svg#person-black"></use>
+        </svg>
+        <span class="modal__label">Имя</span>
+      </label>
+      <label class="modal__field">
+        <input type="tel" name="tel" class="modal__input" placeholder=" ">
+        <svg class="modal__svg">
+          <use href="./images/sprite.svg#phone-black"></use>
+        </svg>
+        <span class="modal__label">Телефон</span>
+      </label>
+      <label class="modal__field">
+        <input type="email" name="mail" class="modal__input" placeholder=" ">
+        <svg class="modal__svg">
+          <use href="./images/sprite.svg#email-black"></use>
+        </svg>
+        <span class="modal__label">Почта</span>
+      </label>
+      <textarea name="comment" rows="10" placeholder="Комментарий" class="modal__textarea"></textarea>
+     <label class="modal-checkbox">
+      <input type="checkbox" name="checkbox" class="modal-checkbox__input">
+      <span class="modal-checkbox__input--customm"></span>
+      <span class="modal-checkbox__label">Соглашаюсь с рассылкой и принимаю <a href="" class="modal-checkbox__label--link list">Условия договора</a></span>
+     </label>
+    <button type="submit"class="modal__button--submit">Отправить</button>
+    </form>
+  </div>
   </div>
   <script src="./js/modal.js"></script>
 </body>
