--- a/index.html
+++ b/index.html
@@ -444,6 +444,6 @@
     </form>
   </div>
   </div>
-  <script src="./js/modal.js"></script>
+  <script src="../js/modal.js"></script>
 </body>
 </html>
