Пофіксив футер в портфоліо

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   </footer>
   <!-- Модальное окно -->
   <div class="backdropd backdropd--hidden" data-modal>
-    <div class="backdrop-modal">
+    <div class="backdrop__modal">
      <form>
       <button data-modal-close class="modal__button--clouse"></button>
       <h2 class="modal__title">Оставьте свои данные, мы вам перезвоним</h2>
