--- a/portfolio.html
+++ b/portfolio.html
@@ -325,13 +325,16 @@
               </li>
             </ul>
           </div>
-          <div class="footer--active">
-            <b class="active__join">Подпишитесь на рассылку</b>
-            <button class="active__submit">
-              <span class="active__title">Подписаться</span>
-            </button>
+            <form class="footer--form">
+              <label class="form__label">
+                <b class="form__label--title">Подпишитесь на рассылку</b> 
+                <input type="email" name="mail" class="form__input" placeholder="   E-mail">
+              </label>
+              <button type="submit" class="form__submit">
+                <span class="form__submit--title">Подписаться</span>
+              </button>
+            </form>
           </div>
-        </div>
         <p class="property">2020 &#x0007C; Developed by GoIT Students</p>
       </div>
     </footer>
